--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "alpha-value-notation": "number",
+    "color-function-notation": "legacy",
+    "no-descending-specificity": null,
+    "declaration-block-single-line-max-declarations": null,
+    "rule-empty-line-before": null,
+    "no-duplicate-selectors": null
+  }
 }
